--- a/frontend/mgmg-project/public/index.html
+++ b/frontend/mgmg-project/public/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="/public/favicon.ico">
     <title>몽글몽글</title>
     <link rel="manifest" href="/manifest.json">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" /> -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" /> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
   </head>
   <body>
     <noscript>
