--- a/frontend/mgmg-project/public/index.html
+++ b/frontend/mgmg-project/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="icon" href="/public/favicon.ico" />
     <title>몽글몽글</title>
     <link rel="manifest" href="/manifest.json" />
